# dd-visitor

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Readme.md  main.cpp
.github/workflows/: cmake.yml  docker-image.yml  sanitizer.yml
include/: CMakeLists.txt  concrete_symbols.hpp  concrete_visitors.hpp  symbol.hpp  symbol_table.hpp  symbol_visitor.hpp  visitor.hpp
include/symbol/: concrete_symbols.hpp  symbol_visitor.hpp  visitor.hpp
include/visitors/: basic_acyclic_visitor.hpp  basic_visitor.hpp  generic_acyclic_visitor.hpp  generic_visitor.hpp  lambda_visitor.hpp  static_visitor.hpp
tests/: CMakeLists.txt  evaluator.hpp  test_evaluator.cpp  test_main.cpp  test_visitor.cpp
tests/symbol/: CMakeLists.txt  geometry.hpp  test_serialization.cpp  test_symbol_main.cpp  test_symbol_table.cpp  test_symbol_visitor.cpp
tests/visitors/: CMakeLists.txt  test_acyclic_visitor.cpp  test_visitor.cpp  test_visitors_main.cpp
